[misc] Fixed a minor layout issue with the JumpToPage close button in IE6 [misc] Hide select controls in IE6 when displaying modal dialogs, since otherwise they appear through the modal screen
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/trunk@20297 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
+++ b/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/widgets/modalPopup.css
@@ -43,6 +43,9 @@
   font-family: Arial, Helvetica, sans-serif;
   line-height: 8px;
 }
+* html .xdialog-close {
+  width: 22px;
+}
 .xdialog-title {
   font-size: 80%;
   font-weight: bold;
